Pre redo