@@ -26,15 +26,16 @@ public class ConstraintSatisfactionTest {
         List<Integer> zDomain = new ArrayList<>();
         zDomain.add(4);
 
-        List<Integer> set1 = new ArrayList<>();
-        for (int i = 0; i < 4; i++) set1.add(i);
-        List<Integer> set2 = new ArrayList<>();
-        for (int i = 0; i < 6; i++) set2.add(i);
-        List<Integer> set3 = new ArrayList<>();
-        for (int i = 4; i < 8; i++) set3.add(i);
-        Variable<Integer> x = new Variable<>("x", set1);
-        Variable<Integer> y = new Variable<>("y", set2);
-        Variable<Integer> z = new Variable<>("z", set3);
+        int expectedSuccessorCount = 4 + 6 + 4;
+        Integer[] set1 = new Integer[4];
+        for (int i = 1; i < 5; i++) set1[i-1] = i;
+        Integer[] set2 = new Integer[6];
+        for (int i = 1; i < 7; i++) set2[i-1] = i;
+        Integer[] set3 = new Integer[4];
+        for (int i = 4; i < 8; i++) set3[i-4] = i;
+        Variable<Integer> x = new Variable<>("x", new ArrayWithView<>(set1));
+        Variable<Integer> y = new Variable<>("y", new ArrayWithView<>(set2));
+        Variable<Integer> z = new Variable<>("z", new ArrayWithView<>(set3));
         Constraint c1 = new Constraint(FunctionParser.fromString("boolean(Integer x,y)-> x > y"));
         Constraint c2 = new Constraint(FunctionParser.fromString("boolean(Integer x,y,z)-> x + y > z"));
 
@@ -48,15 +49,16 @@ public class ConstraintSatisfactionTest {
 
     @Test
     public void simpleHappyDayTestWithSearch() {
-        List<Integer> set1 = new ArrayList<>();
-        for (int i = 0; i < 10; i++) set1.add(i);
-        List<Integer> set2 = new ArrayList<>();
-        for (int i = 0; i < 10; i++) set2.add(i);
-        List<Integer> set3 = new ArrayList<>();
-        for (int i = 4; i < 16; i++) set3.add(i);
-        Variable<Integer> x = new Variable<>("x", set1);
-        Variable<Integer> y = new Variable<>("y", set2);
-        Variable<Integer> z = new Variable<>("z", set3);
+        int expectedSuccessorCount = 4 + 6 + 4;
+        Integer[] set1 = new Integer[4];
+        for (int i = 1; i < 11; i++) set1[i-1] = i;
+        Integer[] set2 = new Integer[6];
+        for (int i = 1; i < 11; i++) set2[i-1] = i;
+        Integer[] set3 = new Integer[4];
+        for (int i = 4; i < 16; i++) set3[i-4] = i;
+        Variable<Integer> x = new Variable<>("x", new ArrayWithView<>(set1));
+        Variable<Integer> y = new Variable<>("y", new ArrayWithView<>(set2));
+        Variable<Integer> z = new Variable<>("z", new ArrayWithView<>(set3));
         Constraint c1 = new Constraint(FunctionParser.fromString("boolean(Integer x,y)-> x > y"));
         Constraint c2 = new Constraint(FunctionParser.fromString("boolean(Integer x,y,z)-> x + y > z"));
 
@@ -68,12 +70,12 @@ public class ConstraintSatisfactionTest {
         assertThat(result.getVariables().get("z").getDomain().size(), is(1));
 
         Object[] args1 = new Object[2];
-        args1[0] = result.getVariables().get("x").getDomain().get(0);
-        args1[1] = result.getVariables().get("y").getDomain().get(0);
+        args1[0] = result.getVariables().get("x").getDomain().getFirst();
+        args1[1] = result.getVariables().get("y").getDomain().getFirst();
         Object[] args2 = new Object[3];
-        args2[0] = result.getVariables().get("x").getDomain().get(0);
-        args2[1] = result.getVariables().get("y").getDomain().get(0);
-        args2[2] = result.getVariables().get("z").getDomain().get(0);
+        args2[0] = result.getVariables().get("x").getDomain().getFirst();
+        args2[1] = result.getVariables().get("y").getDomain().getFirst();
+        args2[2] = result.getVariables().get("z").getDomain().getFirst();
 
         assertThat(c1.evaluate(args1), is(true));
         assertThat(c2.evaluate(args2), is(true));
